2014-02-18  Mirek Kaim  <mirek.kaim@outlook.com>  (tiny change)

	* configure.ac [HAVE_W32]: Test for ImageMagick.  (Bug#16754)

2014-02-14  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.in (install-arch-indep): Allow ' ' in destdir (Bug#16717).
	This fixes a bug in the previous change.  Also, use $(SHELL)
	rather than sh, as that's more likely to be portable.

2014-02-13  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.in (install-arch-indep): Simplify (Bug#16717).
	This should make it more reliable, and hopefully more portable to
	non-GNU 'make' implementations such as HP-UX 'make'.

2014-02-13  Juanma Barranquero  <lekktu@gmail.com>

	* Makefile.in (install-nt): Also pass datadir.

2014-02-05  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2014-01-23 pthread: work around winpthread header pollution on mingw
	* lib/time.in.h: Update from gnulib.

2014-01-23  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2014-01-22 qacl: check for fchmod
	* m4/acl.m4: Update from gnulib.

2014-01-22  Paul Eggert  <eggert@cs.ucla.edu>

	Fix miscellaneous update-game-score bugs.
	* configure.ac (difftime): Remove.

2014-01-20  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2014-01-20 stdalign: port to HP-UX compilers
	2014-01-16 strtoimax: port to platforms lacking 'long long'
	2014-01-16 update from texinfo
	* lib/stdalign.in.h, lib/strtoimax.c: Update from gnulib.

2014-01-12  Glenn Morris  <rgm@gnu.org>

	* README: Replace reference to etc/MAILINGLISTS.

2014-01-11  Fabrice Popineau  <fabrice.popineau@gmail.com>

	* configure.ac: Read $srcdir/nt/mingw-cfg.site when $MSYSTEM is
	"MINGW64" as well.

2014-01-11  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2014-01-07 update from texinfo
	2014-01-06 md5, sha1, sha256, sha512: support older autoconf

2014-01-09  Eric S. Raymond  <esr@thyrsus.com>

	* INSTALL, configure.ac, etc/CONTRIBUTE, nt/INSTALL: Remove